--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -14,6 +14,10 @@ $bg-color:#dedddc;
     box-sizing: border-box;
 }
 
+h1{
+    font-weight: bold;
+}
+
 
 a{
     color: #fff;
@@ -45,6 +49,7 @@ p{
     background-color: $bg-color;
     
     h1{
+        font-weight: bold;
         font-size: 28px;
         padding: 1.5em;
     }
@@ -355,8 +360,10 @@ p{
     margin-left: -450px;
     opacity: 0;
     transition: opacity 1.5s;
+    font-weight: bold;
     
     p{
+        font-weight: bold;
         text-shadow: 1px 1px 5px rgba(0,0,0,0.35);
         font-size: 40px;
         line-height: 1.9em;
