--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -77,50 +77,56 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   box-sizing: border-box;
 }
 
-/* line 18, ../sass/_main_style.scss */
+/* line 17, ../sass/_main_style.scss */
+h1 {
+  font-weight: bold;
+}
+
+/* line 22, ../sass/_main_style.scss */
 a {
   color: #fff;
   text-decoration: none;
 }
 
-/* line 23, ../sass/_main_style.scss */
+/* line 27, ../sass/_main_style.scss */
 body {
   display: none;
   font-family: Hoefler Text,Songti TC,serif;
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 29, ../sass/_main_style.scss */
+/* line 33, ../sass/_main_style.scss */
 p {
   line-height: 1.55em;
   letter-spacing: 0.5px;
 }
 
-/* line 35, ../sass/_main_style.scss */
+/* line 39, ../sass/_main_style.scss */
 .clearfix:after {
   display: table;
   content: "";
   clear: both;
 }
 
-/* line 42, ../sass/_main_style.scss */
+/* line 46, ../sass/_main_style.scss */
 .main-container {
   text-align: center;
   padding: 60px 25px;
   background-color: #dedddc;
 }
-/* line 47, ../sass/_main_style.scss */
+/* line 51, ../sass/_main_style.scss */
 .main-container h1 {
+  font-weight: bold;
   font-size: 28px;
   padding: 1.5em;
 }
-/* line 52, ../sass/_main_style.scss */
+/* line 57, ../sass/_main_style.scss */
 .main-container p {
   padding: 0.55em;
   font-size: 18px;
   color: #282726;
 }
-/* line 58, ../sass/_main_style.scss */
+/* line 63, ../sass/_main_style.scss */
 .main-container .btn {
   margin-top: 60px;
   border: solid 1px #8a2b1e;
@@ -130,17 +136,17 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 67, ../sass/_main_style.scss */
+/* line 72, ../sass/_main_style.scss */
 .main-container .btn:hover {
   background: #8a2b1e;
   color: #fff;
 }
-/* line 72, ../sass/_main_style.scss */
+/* line 77, ../sass/_main_style.scss */
 .main-container .btn:hover i {
   transform: translate(3px, 1px);
   color: #fff;
 }
-/* line 78, ../sass/_main_style.scss */
+/* line 83, ../sass/_main_style.scss */
 .main-container .btn i {
   color: #8a2b1e;
   font-size: 18px;
@@ -150,7 +156,7 @@ p {
   transition: all 0.7s;
 }
 
-/* line 94, ../sass/_main_style.scss */
+/* line 99, ../sass/_main_style.scss */
 .kv-zone h1 {
   text-align: center;
   font-size: 50px;
@@ -158,7 +164,7 @@ p {
   padding: 60px 25px;
 }
 
-/* line 104, ../sass/_main_style.scss */
+/* line 109, ../sass/_main_style.scss */
 .about-wrapper .header {
   background-size: 100%;
   background-position: center;
@@ -167,20 +173,20 @@ p {
   background-image: url(../images/13_kvbackground.jpg);
 }
 
-/* line 116, ../sass/_main_style.scss */
+/* line 121, ../sass/_main_style.scss */
 .index-wrapper .header {
   min-height: 100vh;
 }
-/* line 120, ../sass/_main_style.scss */
+/* line 125, ../sass/_main_style.scss */
 .index-wrapper .nav-zone:first-child {
   opacity: 0;
 }
 
-/* line 125, ../sass/_main_style.scss */
+/* line 130, ../sass/_main_style.scss */
 .header {
   background-color: #fff;
 }
-/* line 128, ../sass/_main_style.scss */
+/* line 133, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -197,80 +203,80 @@ p {
   z-index: 0;
 }
 
-/* line 145, ../sass/_main_style.scss */
+/* line 150, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 150, ../sass/_main_style.scss */
+/* line 155, ../sass/_main_style.scss */
 .nav-zone:first-child {
   transition: opacity 1.5s;
 }
-/* line 154, ../sass/_main_style.scss */
+/* line 159, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 158, ../sass/_main_style.scss */
+/* line 163, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 162, ../sass/_main_style.scss */
+/* line 167, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 167, ../sass/_main_style.scss */
+/* line 172, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 169, ../sass/_main_style.scss */
+/* line 174, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 172, ../sass/_main_style.scss */
+/* line 177, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 178, ../sass/_main_style.scss */
+/* line 183, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 182, ../sass/_main_style.scss */
+/* line 187, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 188, ../sass/_main_style.scss */
+/* line 193, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 195, ../sass/_main_style.scss */
+/* line 200, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 200, ../sass/_main_style.scss */
+/* line 205, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
-/* line 206, ../sass/_main_style.scss */
+/* line 211, ../sass/_main_style.scss */
 .nav-zone .menu-btn {
   cursor: pointer;
   position: relative;
   padding: 5px;
 }
-/* line 210, ../sass/_main_style.scss */
+/* line 215, ../sass/_main_style.scss */
 .nav-zone .menu-btn i {
   color: #fff;
   font-size: 19px;
 }
-/* line 215, ../sass/_main_style.scss */
+/* line 220, ../sass/_main_style.scss */
 .nav-zone .menu-btn .fa-remove {
   position: absolute;
   background: #32312e;
@@ -282,16 +288,16 @@ p {
   opacity: 0;
   transition: all 0.7s ease;
 }
-/* line 229, ../sass/_main_style.scss */
+/* line 234, ../sass/_main_style.scss */
 .nav-zone .menu-active .fa-remove {
   transform: rotate(0deg);
   opacity: 1;
 }
-/* line 235, ../sass/_main_style.scss */
+/* line 240, ../sass/_main_style.scss */
 .nav-zone .social-btns {
   text-align: center;
 }
-/* line 237, ../sass/_main_style.scss */
+/* line 242, ../sass/_main_style.scss */
 .nav-zone .social-btns a {
   display: inline-block;
   border: solid 1px #b28850;
@@ -302,12 +308,12 @@ p {
   line-height: 45px;
   text-align: center;
 }
-/* line 247, ../sass/_main_style.scss */
+/* line 252, ../sass/_main_style.scss */
 .nav-zone .social-btns a i {
   color: #b28850;
 }
 
-/* line 254, ../sass/_main_style.scss */
+/* line 259, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
@@ -317,65 +323,65 @@ p {
   top: 0px;
   left: 0px;
 }
-/* line 262, ../sass/_main_style.scss */
+/* line 267, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
   max-width: 110px;
 }
-/* line 264, ../sass/_main_style.scss */
+/* line 269, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 268, ../sass/_main_style.scss */
+/* line 273, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 273, ../sass/_main_style.scss */
+/* line 278, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
   padding: 5px 0;
 }
-/* line 277, ../sass/_main_style.scss */
+/* line 282, ../sass/_main_style.scss */
 .fixed-nav .navi-box .contact-btn {
   margin-right: 0px;
   margin-left: 10px;
 }
 
-/* line 287, ../sass/_main_style.scss */
+/* line 292, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 290, ../sass/_main_style.scss */
+/* line 295, ../sass/_main_style.scss */
 .footer .footer-zone {
   background-image: url(../images/10footertexture.jpg);
   background-repeat: repeat;
   padding: 35px;
 }
-/* line 297, ../sass/_main_style.scss */
+/* line 302, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 303, ../sass/_main_style.scss */
+/* line 308, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
   padding: 10px 35px;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 309, ../sass/_main_style.scss */
+/* line 314, ../sass/_main_style.scss */
 .footer .container .box:nth-child(1) {
   text-align: right;
 }
-/* line 313, ../sass/_main_style.scss */
+/* line 318, ../sass/_main_style.scss */
 .footer .container .box:nth-child(3) {
   text-align: left;
 }
-/* line 317, ../sass/_main_style.scss */
+/* line 322, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
   border-right: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 323, ../sass/_main_style.scss */
+/* line 328, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -387,19 +393,19 @@ p {
   transition: all 0.7s;
   margin-right: 94px;
 }
-/* line 334, ../sass/_main_style.scss */
+/* line 339, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 341, ../sass/_main_style.scss */
+/* line 346, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 351, ../sass/_main_style.scss */
+/* line 356, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -407,9 +413,11 @@ p {
   margin-left: -450px;
   opacity: 0;
   transition: opacity 1.5s;
+  font-weight: bold;
 }
-/* line 359, ../sass/_main_style.scss */
+/* line 365, ../sass/_main_style.scss */
 .slogan p {
+  font-weight: bold;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
   line-height: 1.9em;
@@ -426,7 +434,7 @@ p {
   text-orientation: upright;
 }
 
-/* line 377, ../sass/_main_style.scss */
+/* line 384, ../sass/_main_style.scss */
 .scroll-btn {
   opacity: 0;
   border: solid 1px rgba(255, 255, 255, 0.5);
@@ -440,7 +448,7 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 390, ../sass/_main_style.scss */
+/* line 397, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
@@ -448,23 +456,23 @@ p {
   opacity: 0.5;
   transition: all 0.7s;
 }
-/* line 398, ../sass/_main_style.scss */
+/* line 405, ../sass/_main_style.scss */
 .scroll-btn:hover {
   border-color: white;
 }
-/* line 401, ../sass/_main_style.scss */
+/* line 408, ../sass/_main_style.scss */
 .scroll-btn:hover i {
   opacity: 1;
   transform: translateY(3px);
 }
 
-/* line 408, ../sass/_main_style.scss */
+/* line 415, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 413, ../sass/_main_style.scss */
+/* line 420, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -472,25 +480,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 421, ../sass/_main_style.scss */
+/* line 428, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 425, ../sass/_main_style.scss */
+/* line 432, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 430, ../sass/_main_style.scss */
+/* line 437, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 434, ../sass/_main_style.scss */
+/* line 441, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 439, ../sass/_main_style.scss */
+/* line 446, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -498,45 +506,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 447, ../sass/_main_style.scss */
+/* line 454, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 452, ../sass/_main_style.scss */
+/* line 459, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 457, ../sass/_main_style.scss */
+/* line 464, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 464, ../sass/_main_style.scss */
+/* line 471, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 469, ../sass/_main_style.scss */
+/* line 476, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 474, ../sass/_main_style.scss */
+/* line 481, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 482, ../sass/_main_style.scss */
+/* line 489, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 486, ../sass/_main_style.scss */
+/* line 493, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -544,24 +552,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 494, ../sass/_main_style.scss */
+/* line 501, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 498, ../sass/_main_style.scss */
+/* line 505, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 506, ../sass/_main_style.scss */
+/* line 513, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 511, ../sass/_main_style.scss */
+/* line 518, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -569,24 +577,24 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 518, ../sass/_main_style.scss */
+/* line 525, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 522, ../sass/_main_style.scss */
+/* line 529, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
 }
-/* line 525, ../sass/_main_style.scss */
+/* line 532, ../sass/_main_style.scss */
 .index-conceptstore-container .btn i {
   color: #fff;
 }
-/* line 529, ../sass/_main_style.scss */
+/* line 536, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover {
   background: #fff;
   color: #8a2b1e;
 }
-/* line 533, ../sass/_main_style.scss */
+/* line 540, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover i {
   color: #8a2b1e;
 }
