--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -16,6 +16,7 @@ $bg-color:#dedddc;
 
 h1{
     font-weight: bold;
+    line-height: 1.35em;
 }
 
 
@@ -43,6 +44,38 @@ p{
     }
 }
 
+.section-menu{
+    text-align: center;
+    li{
+        display: inline-block;
+        cursor: pointer;
+        font-size: 18px;
+        padding: 5px 25px;
+        border-right: solid 1px rgba(0,0,0,0.5);
+        
+        &:hover{
+            color: $theme-alert;
+        }
+        
+        &:last-child{
+            border-right: none;
+        }
+        
+    }
+    
+    &:after{
+        content: "";
+        width: 100%;
+        max-width: 1600px;
+        height: 5px;
+        background-image: url(../images/04subnav_line.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        display: block;
+        margin: 35px auto 65px;
+    }
+}
+
 .main-container{
     text-align: center;
     padding: 60px 25px;
@@ -52,6 +85,39 @@ p{
         font-weight: bold;
         font-size: 28px;
         padding: 1.5em;
+        color: $font-color;
+    }
+    
+    h1+hr{
+        margin-top: -15px;
+    }
+    
+    hr{
+        display: table;
+        position: relative;
+        height: 8px;
+        width: 8px;
+        border-radius: 100%;
+        background: $theme-alert;
+        border: none;
+        margin: 20px auto;
+        
+        &:after,&:before{
+            content: "";
+            position: absolute;
+            top: 0px;
+            left: -35px;
+            height: 8px;
+            width: 8px;
+            border-radius: 100%;
+            background: $theme-alert;
+        }
+        
+        &:before{
+            left: auto;
+            right: -35px;
+        }
+        
     }
     
     p{
@@ -111,7 +177,7 @@ p{
         background-position: center;
         background-repeat: no-repeat;
         padding: 0px 25px 60px;
-        background-image: url(../images/13_kvbackground.jpg);
+        background-image: url(../images/13_kvbackgroundB.jpg);
     }
 }
 
