--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -5,6 +5,15 @@
 }
 
 
+@media(min-width:1600px){
+    .about-wrapper{
+        .header{
+            background-image: url(../images/13_kvbackground.jpg);
+            background-size: 100%;
+        }
+    }
+}
+
 @media(min-width:777px){
     .visible-xs{
         display: none;
@@ -29,6 +38,10 @@
         .header{
             
         }
+    }
+    
+    .main-container h1 + hr{
+        margin-top: 15px;
     }
     
     .header{
@@ -129,6 +142,20 @@
     
     .index-conceptstore-container{
         background-size: auto 100%;
+    }
+    
+    .about-wrapper{
+        .header{
+            background-image: url(../images/13_kvbackground.jpg);
+            background-size: auto 100%;
+            margin-top: 49px;
+            padding: 15px 15px;
+            
+            h1{
+                font-size: 30px;
+                letter-spacing: 1px;
+            }
+        }
     }
     
     .footer{
